fixing white space above navbar

--- a/calabrian.css
+++ b/calabrian.css
@@ -76,3 +76,8 @@ d-appendix {
 /*-- Additional custom styles --*/
 /* Add any additional CSS rules below                      */
 
+
+.distill-site-header {
+    position: absolute;
+}
+
